tests/miniJava/neg/004872_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] false java ) { return 0 ; } }
